--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ buildNumber.properties
 .mvn/timing.properties
 .idea
 week-1.iml
+.DS_Store
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
